--- a/styles/general.css
+++ b/styles/general.css
@@ -10,5 +10,6 @@ body {
   padding-top: 80px;
   padding-left: 96px;
   padding-right: 24px;
+  padding-bottom: 100px;
   background-color: rgb(248, 248, 248);
 }
