--- a/styles/video.css
+++ b/styles/video.css
@@ -10,6 +10,11 @@
   margin-bottom: 10px;
 }
 
+.video-link{
+text-decoration: none;
+color: black;
+}
+
 .video-info-grid {
   display: grid;
   grid-template-columns: 50px 1fr;
@@ -42,6 +47,54 @@
   row-gap: 40px;
 }
 
+.profile-picture-container {
+  position: relative;
+  display: inline-block;
+}
+
+.channel-tooltip {
+  background-color: white;
+  width: 200px;
+  padding: 12px 12px;
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+  position: absolute;
+  top: 55px;
+  z-index: 300;
+ 
+  opacity: 0;
+  pointer-events: none;
+
+  display: flex;
+  align-items: center;
+  transition: opacity 0.15s;
+}
+
+.profile-picture-container:hover .channel-tooltip {
+  opacity: 1;
+}
+
+.channel-tooltip-picture {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  margin-right: 8px;
+}
+
+.channel-tooltip-name {
+  font-family: Roboto, Arial;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+
+.channel-tooltip-stats {
+  font-family: Roboto, Arial;
+  color: rgb(96, 96, 96);
+  font-size: 14px;
+
+}
+
 @media (max-width: 750px) {
   .video-grid {
     grid-template-columns: 1fr 1fr;
@@ -57,6 +110,14 @@
 @media (min-width: 1000px) {
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .video-title {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .video-author,
+  .video-stats {
+    font-size: 14px;
   }
 }
 
