--- a/styles/general.css
+++ b/styles/general.css
@@ -10,6 +10,12 @@ body {
   padding-top: 80px;
   padding-left: 96px;
   padding-right: 24px;
-  padding-bottom: 100px;
   background-color: rgb(248, 248, 248);
+  padding-bottom: 100px;
+}
+
+@media (min-width: 1200.1px) {
+  body {
+    margin-left: 168px;
+  }
 }
