--- a/styles/header.css
+++ b/styles/header.css
@@ -70,7 +70,7 @@
 .search-button,
 .voice-search-button,
 .upload-icon-container,
-.youtube-apps-container,
+.youtube-icon-container,
 .notifications-icon-container {
   display: flex;
   justify-content: center;
@@ -81,7 +81,7 @@
 .search-button .tooltip,
 .voice-search-button .tooltip,
 .upload-icon-container .tooltip,
-.youtube-apps-container .tooltip,
+.youtube-icon-container .tooltip,
 .notifications-icon-container .tooltip {
   position: absolute;
   background-color: gray;
@@ -102,8 +102,8 @@
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
 .upload-icon-container:hover .tooltip,
-.youtube-apps-container:hover .tooltip,
-.notifications-icon-container:hover .tooltip {
+.youtube-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip{
   opacity: 1;
 }
 
