--- a/styles/video.css
+++ b/styles/video.css
@@ -4,15 +4,10 @@
 
 .video-title {
   margin-top: 0;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 20px;
   margin-bottom: 10px;
-}
-
-.video-link{
-text-decoration: none;
-color: black;
 }
 
 .video-info-grid {
@@ -20,10 +15,16 @@ color: black;
   grid-template-columns: 50px 1fr;
 }
 
+.video-link{
+  text-decoration: none;
+  color: black;
+}
+
 .profile-picture {
   width: 36px;
   border-radius: 50px;
 }
+
 
 .thumbnail-row {
   margin-bottom: 8px;
@@ -61,7 +62,7 @@ color: black;
   position: absolute;
   top: 55px;
   z-index: 300;
- 
+
   opacity: 0;
   pointer-events: none;
 
@@ -92,7 +93,18 @@ color: black;
   font-family: Roboto, Arial;
   color: rgb(96, 96, 96);
   font-size: 14px;
+}
 
+.video-time {
+  font-size: 12px;
+  font-weight: 500;
+  padding: 4px;
+  border-radius: 2px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
 }
 
 @media (max-width: 750px) {
@@ -110,25 +122,19 @@ color: black;
 @media (min-width: 1000px) {
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
+   
+}
+
+@media (min-width: 1000px) {
   .video-title {
     font-size: 16px;
     line-height: 24px;
   }
+}
+
+@media (min-width: 1000px) {
   .video-author,
   .video-stats {
     font-size: 14px;
   }
-}
-
-.video-time {
-  font-size: 12px;
-  font-weight: 500;
-  padding: 4px;
-  border-radius: 2px;
-  background-color: black;
-  color: white;
-  position: absolute;
-  bottom: 8px;
-  right: 5px;
 }
