--- a/styles/video.css
+++ b/styles/video.css
@@ -107,6 +107,12 @@
   right: 5px;
 }
 
+@media (max-width: 600px) {
+  .video-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
 @media (max-width: 750px) {
   .video-grid {
     grid-template-columns: 1fr 1fr;
