--- a/styles/video.css
+++ b/styles/video.css
@@ -107,6 +107,7 @@
   right: 5px;
 }
 
+
 @media (max-width: 750px) {
   .video-grid {
     grid-template-columns: 1fr 1fr;
@@ -124,6 +125,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
    
 }
+}
 
 @media (min-width: 1000px) {
   .video-title {
@@ -138,10 +140,9 @@
     font-size: 14px;
   }
 }
-  
-  @media (max-width:600px){
+
+@media (max-width:600px){
   .video-grid {
     grid-template-columns: 1fr;
   }
 }
-
